Fix overflow-y of nav on multi-col [site]

--- a/site/sass/components/_nav.scss
+++ b/site/sass/components/_nav.scss
@@ -60,6 +60,7 @@ body.is-menu-open {
   }
 
   @include mq.from-multi-col {
+    padding-bottom: 0;
   }
 }
 
